# dcdashboard

./: .gitignore  dcdetails.ipynb  index.html  pyproject.toml  sample.html  temp.json
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
backend-1/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  gunicorn_config.py  pyproject.toml
backend-1/.claude/: settings.local.json
backend-1/app/: __init__.py  main.py
backend-1/app/config/: settings.py
backend-1/app/exceptions/: __init__.py  handlers.py
backend-1/app/models/: __init__.py  common.py  dc_location.py  dc_onhand.py  dc_order_line.py  descartes_info.py  invoice_lines.py  network_inventory.py  order_hold_history.py  trip_exception.py
backend-1/app/routers/: __init__.py  dc_locations.py  dc_onhand.py  dc_order_lines.py  descartes_info.py  health.py  invoice_lines.py  network_inventory.py  order_hold_history.py  trip_exceptions.py
backend-1/app/services/: __init__.py  database.py  dc_location_service.py  dc_onhand_service.py  dc_order_line_service.py  descartes_info_service.py  invoice_lines_service.py  network_inventory_service.py  order_hold_history_service.py  trip_exception_service.py
backend-1/tests/: conftest.py
docs/: DC_DASHBOARD_DESIGN.md  LAYOUT_REFERENCE.md
frontend/.claude/: settings.local.json
frontend/.clavix/: config.json
frontend/dc-dashboard-app/: .gitignore  README.md  index.html  package-lock.json  package.json
frontend/dc-dashboard-app/backend/: .env.example  main.py  pyproject.toml
frontend/dc-dashboard-app/backend/baml_src/: clients.baml  generators.baml  talk_to_data.baml  taltodata_backup.baml.bak
frontend/dc-dashboard-app/backend/db/: 001_create_feedback_table.sql  002_create_metrics_table.sql
indexingcodebase/: main.py  pyproject.toml
indexingcodebase/.claude/: settings.local.json
(+131 files in other folders)
