    [project]
    name = "dcdashboard"
    version = "0.1.0"
dependencies = [
    "baml-py>=0.214.0",
    "duckdb>=1.4.2",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "oracledb>=3.4.1",
    "pandas>=2.3.3",
    "pgvector>=0.4.1",
    "psycopg-pool>=3.3.0",
    "psycopg[binary]>=3.3.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.1.2",
    "sqlalchemy>=2.0.44",
]

[tool.uv.workspace]
members = [
    "indexingcodebase",
]
